# synergy-coherence-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  R-CAT_Theory.md  README.md  ROADMAP.md  mkdocs.yml  phi_Entry_001.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
examples/: cli_example.py
notebooks/: demo.ipynb  synergy_coherence_analysis.ipynb
src/synergy_phi/: __init__.py  __main__.py  cli.py  logger.py  metrics.py  powit.py
tests/: conftest.py  test_basic.py  test_cli.py  test_logger_powit.py  test_metrics.py
