[project]
name = "synergy_phi"
version = "0.1.0"
description = "A Python library for synergy_phi"
authors = [
    { name = "AcashaOrg", email = "contact@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.optional-dependencies.dev]
pytest = "*"
nbconvert = "*"
jupyter = "*"
build = "*"
twine = "*"
mkdocs-material = "*"

[project.urls]
Homepage = "https://github.com/AcashaOrg/synergy-coherence-lab"

[project.scripts]
synergy-phi = "synergy_phi.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include = ["*.md", "notebooks/**/*"]
